--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -52,8 +52,17 @@
 
 
 
-
-                <p:outputLabel value="#{msg['application.version']}" style="color: white"/>
+              <b:row>
+                   <p:outputLabel value="#{msg['application.version']}" style="color: white"/>
+              </b:row>
+              <b:row>
+                  <p:outputLabel value="#{app['login.username']} sorteo" style="color: white"/>
+              </b:row>
+              <b:row>
+                  <p:outputLabel value="#{app['login.password']} sorteo" style="color: white"/>
+              </b:row>
+                
+                
 
 
             </h:form>
