elimina el ultimo numero

--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -77,7 +77,7 @@
                             foregroundColor="brown" backgroundColor="#00000"
                             />
 
-                    <p:commandButton value="#{msg['button.rechazar']}" 
+                    <p:commandButton value="#{msg['button.rechazarultimo']}" 
 
                                      rendered="#{applicationController.iniciado}"
                                      action="#{applicationController.rechazar()}"
